2003-06-01  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * Released 2.0.45-stable.

2003-05-29  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.44.

        * The RSS feed now displays the changed pages as well.  Suggested
        by Alain Ravet.

        * v2.0.43.

        * CheckLockTag would sometimes throw a NullPointerException.
        Reported by Romeo Disca. 

2003-05-23  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.42.

        * Wiki.jsp is now protected against empty page names.

        * CachingProvider now also has the ability to estimate the cache
        size.

        * CachingProvider now checks if the pages have been externally
        modified before offering the pages.  However, it may take up to
        five seconds to notice the change.  This should allow you to run
        multiple wikis against the same files.

        * The out.png was not properly transparent, but should be now.
        Thanks to Paul Downes.

2003-05-22  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * RSS generator now also displays whether the file that was
        changed was a wikipage or an attachment.

        * Fixed attachment URL generation: RSSGenerator would generate
        faulty URLs, and practically no routine did URL encoding.  Oops.
        Reported by StefanRiss.

2003-04-16  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.41.

        * Removed superfluous "page" attribute from AttachmentIteratorTag
        in jspwiki.tld, which caused conflicts in WebLogic and WebSphere.
        Reported by many people, and I thought I had it fixed for 2.0.33,
        but apparently I hadn't.  Sigh.  First goes the memory, and
        then...

2003-04-15  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.0.40.

        * Backported CalendarTag month navigation from 2.1.x.  Requested
        by Foster Schucker.

2003-04-11  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>